[workspace]
members = ["lib/*"]

[package]
name = "forth-lsp"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "LSP for the Forth programming language"
repository = "https://github.com/alexanderbrevig/forth-lsp"
keywords = ["forth", "lsp"]
categories = ["development-tools"]

[[bin]]
name = "forth-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7.0"
serde = "1.0.163"
serde_json = "1.0.96"
lsp-types = "0.94.0"
toml = "0.7.4"
ropey = "1.6.0"
anyhow = "1.0.71"
thiserror = "1.0.40"

[dependencies.forth-lexer]
version = "0.1.1"
path = "lib/forth-lexer"
features = ["ropey"]
