[workspace]
members = ["lib/*"]
resolver = "2"

[package]
name = "forth-lsp"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "LSP for the Forth programming language"
repository = "https://github.com/alexanderbrevig/forth-lsp"
keywords = ["forth", "lsp"]
categories = ["development-tools"]

[[bin]]
name = "forth-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7.9"
serde = "1.0.228"
serde_json = "1.0.149"
lsp-types = "0.97.0"
toml = "0.9.11"
ropey = "1.6.1"
anyhow = "1.0.101"
thiserror = "2.0.18"

[dependencies.forth-lexer]
version = "0.2.1"
path = "lib/forth-lexer"
features = ["ropey"]

[dev-dependencies]
tempfile = "3.24.0"
