[package]
name = "forth-lexer"
version = "0.1.0"
description = "Simple but complete lexer for the forth language"
license = "MIT"
repository = "https://github.com/alexanderbrevig/forth-lsp/tree/main/lib/forth-lexer"
edition = "2021"

[dependencies]
ropey = { version = "1.6.0", optional = true }
nom = "7.1.3"
anyhow = "1.0.71"

[features]
ropey = ["dep:ropey"] # This is really only used for an integration test
