[package]
name = "forth-lexer"
version = "0.2.1"
description = "Simple but complete lexer for the forth language"
license = "MIT"
repository = "https://github.com/alexanderbrevig/forth-lsp/tree/main/lib/forth-lexer"
edition = "2021"
keywords = ["forth", "lexer"]
categories = ["parser-implementations"]

[dependencies]
ropey = { version = "1.6.1", optional = true }
nom = "8.0.0"
anyhow = "1.0.100"

[features]
ropey = ["dep:ropey"] # This is really only used for an integration test
